...
    <string name="sunlookup_information">The APP looks up sunrise and sunset times based on the latitude and longitude entered by the user.</string>
    <string name="sunlookup_information1">The lat range is -90.00 to 90.00 and longitude range is -180.00 to 180.00.</string>
    <string name="sunlookup_information2">If it is greater than or less than the range, the APP will convert it to the correct number.</string>
    <string name="sunlookup_information3">Negative numbers represent south lat and west longitudes.</string>
    <string name="sl_ifo_titlr">Sun Lookup</string>
    <string name="delete">Delete</string>
    <string name="first">Sunrise/Sunset</string>
    <string name="second">Recipe</string>
    <string name="third">Dictionary</string>
    <string name="forth">Deezer Song</string>
    <string name="home">Home</string>
    <string name="help">Help</string>
    <string name="word">Word</string>
    <string name="hint">Enter a word</string>
    <string name="definition">Definition</string>
    <string name="search">Look up</string>
    <string name="save">Save</string>
...
    <string name="error_msg">Please enter a valid word</string>
    <string name="sun">Sunrise and Sunset lookup</string>
    <string name="RecipeSearch">Recipe Search</string>
    <string name="da">Dictionary API</string>
    <string name="dssa">Deezer song search api</string>
    <string name="thank">Thank you using this APP</string>
    <string name="Welcome">Welcome</string>

    <!--Recipe Search value strings-->
    <string name="search_hint">Enter a recipe name...</string>
    <string name="search_button">Search</string>
    <string name="favorite_recipes">favorite list</string>
    <string name="enter_search_term">Please enter a search term.</string>
...
