<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/app_name"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Welcome"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:typeface="normal"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.120000005" />
    <TextView
        android:id="@+id/textView_sun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/sun"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.120000005" />
    <TextView
        android:id="@+id/textView_rs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RecipeSearch"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:typeface="normal"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_sun"
        app:layout_constraintVertical_bias="0.120000005" />
    <TextView
        android:id="@+id/textView_da"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/da"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:typeface="normal"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_rs"
        app:layout_constraintVertical_bias="0.120000005" />
    <TextView
        android:id="@+id/textView_dssa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dssa"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:typeface="normal"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_da"
        app:layout_constraintVertical_bias="0.120000005" />
    <TextView
        android:id="@+id/textView_th"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thank"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:typeface="normal"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_dssa"
        app:layout_constraintVertical_bias="0.120000005" />


    <include
        android:id="@+id/include"
        layout="@layout/bottom_navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>